...
          });
        },
        body: Stack(
          fit: StackFit.expand,
          children: [
            GoogleMap(
              key: const ValueKey("googleMap"),
              rotateGesturesEnabled: false,
              myLocationButtonEnabled: false,
              myLocationEnabled: true,
              initialCameraPosition: initialCameraPosition,
              markers: stateInfo.markers,
              mapToolbarEnabled: false,
...
